--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JavaJam Coffee House</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -22,6 +23,11 @@
         </nav>
         <main>
             <h2>Coffee at JavaJam</h2>
+            <div class="row">
+               
+            <div class="col-md-6"><img src='https://images.pexels.com/photos/851555/pexels-photo-851555.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500'
+                 alt="Coffee cup" width="400" height="250px"></div>
+            <div class="col-md-6">
             <ul>
                 <li>Speciality Coffee and Tea</li>
                 <li>Bagels, Muffins, and Gluten-free Pastries</li>
@@ -35,8 +41,9 @@
                     Ellison Bay, WI 54210<br>
                     888-555-5555<br>
                 </p>
-
             </div>
+            </div>
+        </div>
 
             <footer>
                 <hr>
