--- a/menu.html
+++ b/menu.html
@@ -6,39 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JavaJam Coffee House</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <div id="wrapper">
-    <header>
-        <h1>JavaJam Coffee House</h1>
-    </header>
-    <nav>
-        <a href="index.html">Home</a>&nbsp;
-        <a href="menu.html">Menu</a>&nbsp;
-        <a href="music.html">Music</a>&nbsp;
-        <a href="jobs.html">Jobs</a>
-    </nav>
-    <main>
-        <h2>Coffee at JavaJam</h2>
-        <dt>
-            <dl>Just Java</dl>
-        <dd>Regular house blend, decaffeinated coffee, or flavor of the day.</dd>
-        <dd>Endless cup $3.00</dd>
-        <dl>Cafe au Lait</dl>
-        <dd>House blended coffee infused into a smooth, steamed milk.</dd>
-        <dd>Single $3.00 Double $4.00</dd>
-        <dl>Iced Cappuccino</dl>
-        <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass</dd>
-        <dd>Single $4.75 Double $6.00</dd>
-        </dt>
+        <header>
+            <h1>JavaJam Coffee House</h1>
+        </header>
+        <nav>
+            <a href="index.html">Home</a>&nbsp;
+            <a href="menu.html">Menu</a>&nbsp;
+            <a href="music.html">Music</a>&nbsp;
+            <a href="jobs.html">Jobs</a>
+        </nav>
 
-        <footer>
-            <hr>
-            Copyright &copy; JavaJam Coffee House<br>
-            <a href="mailto:george@gichuki.com">george@gichuki.com</a>
-        </footer>
+        <main>
+            <h2>Coffee at JavaJam</h2>
+            <div class="row">
+                <div class="col-md-6"><img
+                        src='https://images.pexels.com/photos/851555/pexels-photo-851555.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500'
+                        alt="Coffee cup" width="400" height="250px"></div>
+                <div class="col-md-6">
+                    <dt>
+                        <dl>Just Java</dl>
+                    <dd>Regular house blend, decaffeinated coffee, or flavor of the day.</dd>
+                    <dd>Endless cup $3.00</dd>
+                    <dl>Cafe au Lait</dl>
+                    <dd>House blended coffee infused into a smooth, steamed milk.</dd>
+                    <dd>Single $3.00 Double $4.00</dd>
+                    <dl>Iced Cappuccino</dl>
+                    <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass</dd>
+                    <dd>Single $4.75 Double $6.00</dd>
+                    </dt>
+                </div>
+            </div>
+
+            <footer>
+                <hr>
+                Copyright &copy; JavaJam Coffee House<br>
+                <a href="mailto:george@gichuki.com">george@gichuki.com</a>
+            </footer>
 
     </div>
 
