--- a/menu.html
+++ b/menu.html
@@ -29,17 +29,17 @@
                         src='https://images.pexels.com/photos/851555/pexels-photo-851555.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500'
                         alt="Coffee cup" width="400" height="250px"></div>
                 <div class="col-md-6">
-                    <dt>
-                        <dl>Just Java</dl>
-                    <dd>Regular house blend, decaffeinated coffee, or flavor of the day.</dd>
-                    <dd>Endless cup $3.00</dd>
-                    <dl>Cafe au Lait</dl>
-                    <dd>House blended coffee infused into a smooth, steamed milk.</dd>
-                    <dd>Single $3.00 Double $4.00</dd>
-                    <dl>Iced Cappuccino</dl>
-                    <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass</dd>
-                    <dd>Single $4.75 Double $6.00</dd>
-                    </dt>
+                    <dl>
+                        <dt>Just Java</dt>
+                        <dd>Regular house blend, decaffeinated coffee, or flavor of the day.
+                            Endless cup $3.00</dd>
+                        <dt>Cafe au Lait</dt>
+                        <dd>House blended coffee infused into a smooth, steamed milk.
+                            Single $3.00 Double $4.00</dd>
+                        <dt>Iced Cappuccino</dt>
+                        <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.
+                            Single $4.75 Double $6.00</dd>
+                    </dl>
                 </div>
             </div>
 
