--- a/menu.html
+++ b/menu.html
@@ -31,14 +31,14 @@
                 <div class="col-md-6">
                     <dl>
                         <dt>Just Java</dt>
-                        <dd>Regular house blend, decaffeinated coffee, or flavor of the day.
-                            Endless cup $3.00</dd>
+                        <dd>Regular house blend, decaffeinated coffee, or flavor of the day.<br>
+                            <li>Endless cup $3.00</li></dd>
                         <dt>Cafe au Lait</dt>
                         <dd>House blended coffee infused into a smooth, steamed milk.
-                            Single $3.00 Double $4.00</dd>
+                            <li>Single $3.00 Double $4.00</li></dd>
                         <dt>Iced Cappuccino</dt>
-                        <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.
-                            Single $4.75 Double $6.00</dd>
+                        <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>
+                            <li>Single $4.75 Double $6.00</li></dd>
                     </dl>
                 </div>
             </div>
